<resources>
    <string name="app_name">Lab1</string>
    <string name="title_activity_films">Activity_Films</string>
    <string name="hint_username">Имя пользователя</string>
    <string name="hint_password">Пароль</string>
    <string name="caption_login">Войти</string>
    <string name="title_all_films">Фильмы</string>
    <string name="title_selected_film">Выбранный фильм</string>
    <string name="recycler_item_film_title">Название фильма</string>
    <string name="recycler_item_genres">Жанры</string>
    <string name="recycler_item_year">Год</string>
    <string name="selected_film_placeholder_countries">Страна</string>
    <string name="selected_film_placeholder_description">Описание</string>
    <string name="app_title">Кино Андроид</string>
    <string name="fab_desc">Наверх</string>
</resources>