<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/recycler_item_bg"
    android:layout_margin="7dp"
    android:padding="7dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/recyclerview_textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/recycler_item_film_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/recyclerview_textView_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/recycler_item_genres"
        android:textStyle="italic"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/recyclerview_textView_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/recycler_item_year"
        android:textSize="18sp"
        android:textColor="#626262"/>
</LinearLayout>