<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.selected_film.SelectedFilmFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selected_film_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_filmTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="#280445"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/recycler_item_film_title" />

        <LinearLayout
            android:id="@+id/linearLayout_middleSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView_filmTitle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_poster"
                android:layout_width="190dp"
                android:layout_height="250dp"
                android:maxWidth="190dp"
                android:maxHeight="250dp"
                android:layout_marginStart="10dp"
                android:src="@android:drawable/ic_notification_clear_all" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recycler_item_genres" />

                <TextView
                    android:id="@+id/textView_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recycler_item_year" />

                <TextView
                    android:id="@+id/textView_countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/selected_film_placeholder_countries" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_middleSection"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/selected_film_placeholder_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<TextView
    android:id="@+id/text_selected_film"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>